tests/invalidTest/other/func_repeated_args.q
# EXPECT Duplicate parameter names
def void errorTest(sint64 a,sint64 a){

}